--- a/registro-vehicular/public/index.html
+++ b/registro-vehicular/public/index.html
@@ -49,6 +49,8 @@
  <link rel="stylesheet" href="%PUBLIC_URL%/plugins/summernote/summernote-bs4.min.css">
 
 
+
+
     <title>React App</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
@@ -94,11 +96,15 @@
 <!-- overlayScrollbars -->
 <script src="%PUBLIC_URL%/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="%PUBLIC_URL%/dist/js/adminlte.js"></script>
+<script src="%PUBLIC_URL%/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="%PUBLIC_URL%/dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="%PUBLIC_URL%/dist/js/pages/dashboard.js"></script>
+
+
+
+
 
 </body>
 </html>
